# cmake-demo-rom

./: .gitignore  CMakeLists.txt  CMakePresets.json  CleanBuild.ps1  FixPaths.ps1  README.md  UpdateToolchain.ps1  cmake-variants.json
.devcontainer/: Dockerfile  README.md  devcontainer.json
.devcontainer/scripts/: git-pull-repos.sh
.github/workflows/: build-docker.yml  build-win-native.yml
CMake/: LibDragon.CMakeLists.cmake.in  toolchain.libdragon.cmake  toolchain.libultra.cmake  toolchain.mips64-elf.cmake  toolchain.n64chain.cmake
CMake/Modules/: FindLIBDRAGON.cmake
inc/: everdrive.h  flashcart.h  language.h  utils.h  version.h  video.h
res/filesystem/help/: SMPTEColor.txt  backlit.txt  colors.txt  diagonal.txt  grid224.txt  gridscroll.txt  linearity224.txt  options.txt  passivelag.txt  scroll.txt  stripes.txt  vmode.txt
src/: 240pSuite.c  everdrive.c  image.c  language.c  main.c  menu.c  utils.c  video.c
tools/: up.bat
